--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,259 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+i{
+  cursor: pointer;
+}
+.no-border{
+  border: none;
+}
+.bold-large{
+  font-size: 2.75rem;
+  font-weight: 400;
+}
+.notes-layout {
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center; 
+  align-items: flex-start;                      
+}
+.your-notes{
+  height: 90vh;
+  overflow-y: auto;
+}
+.card{
+  max-width: 25vw;
+}
+.wid{
+  flex: 0 0 auto;
+  width: 83.33333333%;
+  max-width: 30vw;
+}
+.wid2{
+  max-width: 30vw;
+}
+.notes{
+  max-height: 30vh;
+  max-width: 30vw;
+  overflow-y: auto;
+  padding: 0rem 1rem 1rem 1rem;
+  margin-top: 0.5rem;
+}
+.position{
+  position: sticky;
+  top: 0;
+  margin-top: 0;
+  z-index: 1000;
+}
+.add-note{
+  height: 90vh;
+  border: 0.5px solid rgba(0, 0, 0, 0.501);
+  border-radius: 10px;
+  margin-top: 0.5rem;
+  margin-right: 2rem;
+  display: flex;
+  justify-content: flex-end;
+}
+.my-btn{
+  width: 40vw;
+}
+.my-margin{
+  margin-bottom: 1.5rem;
+}
+.main{
+  display: flex;
+  justify-content: center;
+  
+}
+.signup1{
+  background-color: rgb(27, 129, 247);
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  gap: 5px;
+  width: 25vw;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.signup2{
+  border: 2px solid rgb(27, 129, 247);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 35vw;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  padding: 3rem;
+}
+.link{
+  margin-top: 3rem;
+  color: rgb(27, 129, 247);
+  text-decoration: underline;
+}
+.password{
+  position: relative;
+}
+.password2{
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  cursor: pointer;
+}
+.password3{
+  position: absolute;
+  right: 0rem;
+  cursor: pointer;
+}
+img{
+  border-radius: 10px;
+}
+.first{
+  gap: 5rem;
+  margin-left: 2.5rem;
+  margin-top: 5rem;
+  border-radius: 10px;
+  padding: 4rem;
+  width: 50vw;
+  box-shadow: 1px 1px 10px grey;
+}
+.your-notes2{
+  display: flex;
+  flex-wrap: wrap;
+  width: 60vw;
+  row-gap: 2rem;
+  max-height: 80vh;
+  overflow-y: auto;
+}
+.todos{
+  border-radius: 1rem;
+  box-shadow: 1px 1px 10px grey;
+  margin-right: 2rem;
+  margin-top: 0.5rem;
+  height: 90vh;
+  padding: 0.5rem;
+  padding-top: 2rem;
+  width: 30vw;
+}
+
+.todo{
+  margin-bottom: 2rem;
+}
+.my-margin2{
+  margin-top: 2rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.line-through-animation {
+  transition: text-decoration 1s ease-in-out , color 1s ease-in-out;
+}
+
+.line-through {
+  text-decoration: line-through;
+}
+
+
+@media only screen and (max-width: 768px){
+  .main{
+    flex-direction: column;
+  }
+  .signup1{
+    width: 90vw;
+    padding: 1rem;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0;
+    margin-bottom: 0;
+  }
+  .signup2{
+    width: 90vw;
+    margin-top: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 10px;
+  }
+  .notes-layout{
+    flex-direction: column;
+    align-items: center;
+  }
+  .todos{
+    width: 80vw;
+    margin-right: 0;
+  }
+  .add-note{
+    margin-top: 2rem;
+    margin-right: 0;
+    justify-content: center;
+  }
+  .your-notes{
+    margin-top: 2rem;
+    width: 80vw;
+  }
+}
+.button{
+  width: 10vw;
+}
+.checkbox{
+  transform: scale(1.5);
+  margin: 10px;
+}
+.todo_p{
+  cursor: pointer;
+  font-size: 1.25rem;
+  width: 12vw;
+}
+.bio{
+  max-height: 5rem;
+  overflow-y: auto;
+}
+@media only screen and (max-width: 768px){
+  .todo_p{
+    font-size: 1.1rem;
+    width: 30vw;
+  }
+  .card{
+    max-width: 90vw;
+    width: 75vw;
+  }
+  .wid{
+    width: 90vw;
+  }
+  .wid2{
+    width: 80vw;
+  }
+  .notes{
+    max-width: 90vw;
+  }
+  .button{
+    width: 30vw;
+  }
+  .card2{
+    max-width: 90vw;
+    width: 75vw;
+  }
+  .checkbox{
+    transform: scale(1);
+    margin: 5px;
+  }
+  .f_col{
+    flex-direction: column;
+  }
+  .first{
+    width: 80vw;
+    margin-left: 0;
+    padding-top: 2rem;
+    align-items: center;
+    gap: 2rem;
+  }
+  .bio{
+    max-height: unset;
+  }
+  .your-notes2{
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 90vw;
+  }
+  .navbar-brand{
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
+}
